# claude-code-chat-history

./: .gitignore  CLAUDE.md  README.md  package.json  vite.config.ts
.github/workflows/: release.yml
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  cost.rs  db.rs  indexer.rs  lib.rs  main.rs  parser.rs  summarize.rs  watcher.rs
src/components/: session-detail.tsx  session-list.tsx  stats-view.tsx  tab-bar.tsx  tldr-ready-banner.tsx  transcript.tsx
src/lib/: ipc.ts  prefs.ts  utils.ts
